--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
   },
   "homepage": "https://github.com/shgysk8zer0/async-idb#readme",
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.5.1",
+    "eslint-plugin-async-await": "0.0.0",
+    "eslint-plugin-babel": "^5.3.0",
     "http-server": "^0.11.1"
   }
 }
